--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2988,13 +2988,13 @@ en:
       identify_os:
         os_version: Operating System Version
         eos_version: Extended Operating System Version
-        paragraph_1: To identify the version of the operating system that is installed on your device, note the second line of the display screen, considering the last two characters. This screen is displayed when the device is connected.
+        paragraph_1: To identify the version of the operating system that is installed on your terminal, restart it and hold the <strong> Key 5 </strong> at boot time.
         paragraph_2: Keep the operating system of your devices up to date. Devices with outdated operating system can be slow and may also have communication problems.
         paragraph_3: 'Minimum operating system requirements for installing the CloudWalk Framework:'
         pos_model: Model POS
       installing_vx805_and_vx820: To load the framework on terminals <strong>VX 805</strong> and <strong>VX 820</strong>, check out <a href='/en/framework/verifone-evo-vx805'>this guide</a>.
       installing_vx805_and_vx820_intro: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>VX 805</strong> and <strong>VX 820</strong>. Be aware of the prerequisites and follow the installation process carefully.
-      introduction: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>e265</strong>, <strong>VX 520</strong>, <strong>VX 680</strong>, <strong>VX 685</strong> and <strong>VX 690</strong>. Be aware of the prerequisites and follow the installation process carefully.
+      introduction: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>E265</strong>, <strong>VX 520</strong>, <strong>VX 680</strong>, <strong>VX 685</strong> and <strong>VX 690</strong>. Be aware of the prerequisites and follow the installation process carefully.
       introduction_cable_terminals: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>VX 805</strong> and <strong>VX 820</strong>. Be aware of the prerequisites and follow the installation process carefully.
       loading_the_framework:
         paragraph_1: To start charging, run <strong>carrega_na_flash.bat</strong> to load the certificates and the CloudWalk Framework.
@@ -3032,24 +3032,34 @@ en:
         paragraph_5: This step is the one with the highest rate of errors because many people connect the serial cable to the wrong port on the POS or the wrong port on the PC, if it has two COM ports.
         paragraph_6: Another important point is that the COM1 port on your computer may be in use by another process which will cause an error in the loading of the CloudWalk Framework, and because the download is only possible through the COM1 port, it must be correctly configured in Windows.
       preparing_the_device_usb:
-        paragraph_1: 'After turning on the terminal and after displaying the splash screen that displays the version of the operating system, the following screen should be shown:'
+        paragraph_1: 'When you connect the terminal with the power cable, after displaying the initial screen that displays the version of the operating system and if it does not have any applications installed, it will remain in the following screen:'
+        paragraph_2: 'If the terminal does not stay on the suggested screen, place it in <strong> download mode </strong> by following the steps below:'
+        paragraph_3: 'Press the <strong> ENTER </strong> and <strong> 7 </strong> keys simultaneously'
+        paragraph_4: 'Enter the password provided by the equipment vendor'
+        paragraph_5: 'Select the menu: <strong> 3 Download </strong>'
+        paragraph_6: 'Press <strong> ENTER </strong> to confirm the <strong> Group ID: _1 </strong>'
+        paragraph_7: 'Re-enter the password provided by the equipment vendor'
+        paragraph_8: 'Select the menu: <strong>1 Single-app</strong>'
+        paragraph_9: 'Select the menu: <strong>1 Full dnld</strong>'
+        paragraph_10: 'Copy the load package to the pendrive and connect it to the terminal'
+        paragraph_11: 'Select the menu: <strong>5 USB Flash Memory</strong>'
       preparing_the_pendrive:
         paragraph_1: 'To load the CloudWalk Framework package on the USB pendrive, follow this procedure:'
         paragraph_2: Connect the USB pendrive to the computer
         paragraph_3: Format the pendrive (format FAT32)
-        paragraph_4: 'Unzip the downloaded CloudWalk Framework package'
-        paragraph_5: 'Copy the file: verifone_evo_usb/lib_cless/model(VX 520 or VX 680)/<strong>VERIFONE.zip</strong> to the pendrive (on root)'
-        paragraph_6: 'Repeat the process with the file: verifone_evo_usb/cw_framework_version/<strong>VERIFONE.zip</strong>'
+        paragraph_4: 'Unzip the <strong> verifone_evo.zip </strong> package you downloaded'
+        paragraph_5: 'Copy the file: <strong> VERIFONE.zip </strong> to the root of the pendrive'
       prerequisites:
         cable: <strong>Charge cable:</strong> USB or Serial
+        adapter: '<Strong> Adapter cable: </strong> Micro USB to USB'
         operating_system: <strong>Operating System:</strong> Microsoft Windows XP SP3 or later.
         pendrive: <strong>USB memory stick:</strong> A USB pendrive.
         serial_port: <strong>Serial port or USB:</strong> available and configured as <strong>COM1</strong>
       table_of_contents:
         identify_os: Checking the device OS version
-        loading_the_framework: Loading the framework on the device
+        loading_the_framework: Loading the CloudWalk Framework
+        loading_the_eos_usb: Updating EOS
         preparing_the_device: Preparing the device
-        preparing_the_pendrive: Preparing the USB stick
         prerequisites: Prerequisites
         wiping_the_device: Cleaning the device
       title: CloudWalk Framework - Verifone EVO
@@ -3074,7 +3084,14 @@ en:
         one:
           title: "If the loading process didn't start, please make sure that:"
           paragraph_1: "The USB stick is formatted with <strong>FAT32</strong>."
-          paragraph_2: "Just the file VERIFONE.zip is present on the root of the USB pendrive."
+          paragraph_2: "Just the file <strong>VERIFONE.zip</strong> is present on the root of the USB pendrive."
+          paragraph_3: "The adapter cable may be with a bad contact."
+          paragraph_4: "The pendrive or the terminal may be damaged."
+        two:
+          title: "If the Framework load fail, please, make sure that"
+          paragraph_1: "The file package <strong>EOS</strong> was previously uploaded and updated;"
+          paragraph_2: "The file package <strong>Cless</strong> was previously uploaded and updated;"
+          paragraph_3: "The file <strong>signature</strong> is compatible with the one from the terminal."
     verifone_verix:
       description: Step by step process of installing the CloudWalk Framework for Verifone Vx 510, Vx 610 and Vx 670.
       identify_os:
