--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -2126,6 +2126,16 @@ pt-BR:
           parameter_3: '<strong>variablereturn</strong> <span class="data-type">[integer]</span><br/>Variável que irá armazenar o retorno do comando, onde:<br/> <span class="data-type"> 1: visor foi pressionado<br/> 0: visor não foi pressionado</span>'
         paragraph_2: No exemplo acima, o comando <strong>system.gettouchscreen</strong> retornará em iXaxis a coordenada X e em iYaxis a coordenada Y do ponto pressionado no display.
         paragraph_3: O laço de repetição é para garantir que o display foi pressionado.
+      system_gettouchscreenkeyboard:
+        description: Aguarde por um evento TOUCHSCREEN ou KEYBOARD.
+        paragraph_1: O comando <span class='code'>system.gettouchscreenkeyboard</span> permite aguardar por um evento TOUCHSCREEN ou KEYBOARD.
+        parameters:
+          parameter_1: <strong>axisx</strong> <span class='data-type'>[integer]</span><br/>Coordenada do eixo X do visor, onde o visor foi pressionado.
+          parameter_2: <strong>axisy</strong> <span class='data-type'>[integer]</span><br/>Coordenada do eixo Y do visor, onde o visor foi pressionado.
+          parameter_3: <strong>variablekey</strong> <span class='data-type'>[string]</span><br/>O valor da tecla pressionada.
+          parameter_4: '<strong>variablereturn</strong> <span class="data-type">[integer]</span><br/>Variável que irá armazenar o retorno do comando, onde:<br/>1: visor foi pressionado<br/> 0: visor não foi pressionado<br/> 2: tecla foi pressionada<br/> 3: timeout'
+        paragraph_2: No exemplo acima, o comando <strong>system.gettouchscreenkeyboard</strong> retornará em iXaxis a coordenada X e em iYaxis a coordenada Y do ponto pressionado no display. Se o usuario pressionar alguma tecla, o comando irá retornar em sKey o valor da tecla pressionada.
+        paragraph_3: O comando irá retornar -1 em caso de timeout.
       system_info:
         description: Busca de informações no sistema do POS (MAC Address, SIM ID, etc)
         paragraph_1: O comando <span class='code'>system.info</span> é usado para retornar informações do dispositivo.
