--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2771,10 +2771,10 @@ en:
           single_device: "Single device"
         introduction: "This guide will walk you through the process of changing the Device configuration menu password, making use of parameters."
         multiple_devices:
-          paragraph_1: "To change the default password of multiple devices, it's necessary to add a new parameter on the desired group. The parameter name is <strong>menupassword</strong>, and it accepts any number sequence from four to eight digits."
+          paragraph_1: "To change the default password of multiple devices, it's necessary to add a new parameter on the desired group. The parameter name is <strong>devicepassword</strong>, and it accepts any number sequence from four to eight digits."
           paragraph_2: "In the example below, all the logical numbers on the group <strong>CloudWalk</strong> will have the menu password changed from 55555 (default) to the new password <strong>112233</strong>."
         single_device:
-          paragraph_1: "To change the default password of a single device, it's necessary to add a new parameter on the desired logical number. As is the group, the parameter name is <strong>menupassword</strong>, and it accepts any number sequence from four to eight digits."
+          paragraph_1: "To change the default password of a single device, it's necessary to add a new parameter on the desired logical number. As is the group, the parameter name is <strong>devicepassword</strong>, and it accepts any number sequence from four to eight digits."
           paragraph_2: "In the example below, the logical number being updated will have the menu password changed from 55555 (default) to the new password <strong>123456</strong>."
     first_launch:
       description: "Procedure for setting up the device after installing the CloudWalk Framework."
