--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -2771,10 +2771,10 @@ pt-BR:
           single_device: "Dispositivos individuais"
         introduction: "Este guia o conduzirá através do processo de alteração da senha padrão do menu de configuração dos dispositivos, através do uso de parâmetros."
         multiple_devices:
-          paragraph_1: "Para alterar a senha padrão de vários dispositivos, é necessário adicionar um novo parâmetro no grupo desejado. O nome do parâmetro é <strong>menupassword</strong>, e o mesmo aceita qualquer sequência numérica entre quatro e oito dígitos."
+          paragraph_1: "Para alterar a senha padrão de vários dispositivos, é necessário adicionar um novo parâmetro no grupo desejado. O nome do parâmetro é <strong>devicepassword</strong>, e o mesmo aceita qualquer sequência numérica entre quatro e oito dígitos."
           paragraph_2: "No exemplo abaixo, todos os números lógicos do grupo <strong>CloudWalk</strong> terão a senha alterada de 55555 (padrão) para a nova senha <strong>112233</strong>."
         single_device:
-          paragraph_1: "Para alterar a senha padrão de um único dispositivo, é necessário adicionar um novo parâmetro no número lógico desejado. Assim como no grupo, o nome do parâmetro é <strong>menupassword</strong>, e o mesmo aceita qualquer sequência numérica entre quatro e oito dígitos."
+          paragraph_1: "Para alterar a senha padrão de um único dispositivo, é necessário adicionar um novo parâmetro no número lógico desejado. Assim como no grupo, o nome do parâmetro é <strong>devicepassword</strong>, e o mesmo aceita qualquer sequência numérica entre quatro e oito dígitos."
           paragraph_2: "No exemplo abaixo, o número lógico que está sendo atualizado terá a senha alterada de 55555 (padrão) para a nova senha <strong>123456</strong>."
     first_launch:
       description: "Procedimento de configuração do dispositivo após a instalação do CloudWalk Framework."
